<resources>
    <string name="app_name">task_3</string>
    <string name="activity_1">Activity 1</string>
    <string name="activity_2">Activity 2</string>
    <string name="activity_3">Activity 3</string>
    <string name="to_second">To second activity</string>
    <string name="to_first">To first activity</string>
    <string name="to_third">To third activity</string>
    <string name="activity_about">Activity about</string>
    <string name="to_about">To activity About</string>
    <string name="content_in_about_activity">Content in about activity</string>
    <string name="nav_app_bar_navigate_up_description">Navigate up</string>
</resources>