<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:id="@+id/fragment3"
    android:layout_height="match_parent"
    tools:context=".Activity3">

    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="0dp"
...
